packages/components/message/style/index.less
@import '../../style/mixins/reset.less';
@import '../../style/motion/move.less';
@import './mixin.less';

.@{message-prefix} {
  .reset-component();

  text-align: center;
  padding: @message-padding;
  font-size: @font-size-md;
  line-height: @message-line-height;

  &-content {
    display: inline-block;
    min-width: @message-content-min-width;
    max-width: @message-content-max-width;
    padding: @message-content-padding-vertical @message-content-padding-horizontal;
    background: @message-content-bg-color;
    border-radius: @message-content-border-radius;
    box-shadow: @message-content-box-shadow;
    pointer-events: all;

    &-text {
      display: inline-block;
      text-align: left;
      width: calc(100% - @font-size-lg - @message-icon-margin-right);
    }

    &-icon {
      margin-right: @message-icon-margin-right;
      font-size: @font-size-lg;
    }
  }

  .message-icon-color(info, @color-info);
  .message-icon-color(success, @color-success);
  .message-icon-color( warning, @color-warning);
  .message-icon-color(error, @color-error);
  .message-icon-color(loading, @color-primary);

  &-wrapper {
    position: fixed;
    left: 0;
    top: @message-wrapper-top;
    width: 100%;
    z-index: @message-wrapper-zindex;
    pointer-events: none;
  }
}

